[metadata]
name = rezbuild
version = 0.15.0
author = PiliPala
author_email = pypi@pilipala.io
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Topic :: Software Development :: Build Tools
description = Build rez packages.
keywords = rez, build
license = GPLv3
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://gitlab.com/Pili-Pala/rezbuild/issues
url = https://gitlab.com/Pili-Pala/rezbuild

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    pip >= 18.0
    build >= 0.3

[options.packages.find]
where = src
